[package]
name = "hydrolog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.56"
chrono = "=0.4.19"
crossbeam = "=0.8.1"
ctrlc = "=3.2.1"
ellipse = "=0.2.0"
log = "=0.4.16"
pad = "=0.1.6"
procfs = "0.12.0"
termion = "=1.5.6"
unicode-segmentation = "1.9.0"